--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1> Yay I hope this works </h>
-    <center><img src="main.css"></center>
+    <i><a href="main.css"> the CSS file </a></i>
   </body>
 </html>
